<resources>
    <string name="app_name">SasisaChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guest_room">GuestRoomActivity</string>
    <string name="title_activity_room">RoomActivity</string>
    <string-array name="message_type">
        <item>Всем</item>
        <item>Приватно</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="room_menu_show_users">Кто в комнате</string>
    <string name="room_menu_back">Назад</string>
    <string name="room_menu_change_topic">Сменить топик</string>
    <string name="room_menu_call_moder">Вызвать модера</string>
    <string name="room_menu_messages_filter">Фильтр сообщений</string>
    <string name="action_logout">Выйти из аккаунта</string>

    <string name="title_activity_user_info">UserInfoActivity</string>

    <string-array name="news_accordion_sections">
        <item>ОБЪЯВЛЕНИЯ</item>
    </string-array>

    <integer-array name="news_accordion_visibility">
        <item>0</item>
    </integer-array>

    <string-array name="rooms_accordion_sections">
        <item>КОМНАТЫ ЧАТА</item>
    </string-array>

    <integer-array name="rooms_accordion_visibility">
        <item>0</item>
    </integer-array>

    <string-array name="messages_accordion_sections">
        <item>МОИ СООБЩЕНИЯ</item>
    </string-array>

    <integer-array name="messages_accordion_visibility">
        <item>0</item>
    </integer-array>

    <string-array name="mafia_accordion_sections">
        <item>МАФИЯ</item>
    </string-array>

    <string-array name="settings_accordion_sections">
        <item>НАСТРОЙКИ</item>
    </string-array>

    <integer-array name="settings_accordion_visibility">
        <item>0</item>
    </integer-array>

    <integer-array name="mafia_accordion_visibility">
        <item>0</item>
    </integer-array>
    <string name="title_activity_news">Объявления</string>
    <string name="title_activity_play_mafia">PlayMafiaActivity</string>
    <string name="title_activity_dialog_list">Диалоги</string>
    <string name="title_activity_view_dialog">Диалоги</string>

    <string name="open_menu">Open</string>
    <string name="closed_menu">Closed</string>

    <string name="title_activity_fullscreen_login">Чат SaSiSa.Ru</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_licenses">Лицензии</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_sasisa_app_compat">SaSiSa.Ru</string>

    <string name="admob_banner_id">ca-app-pub-1581341295962339/9559797203</string>
    <string name="admob_roombottombanner_id">ca-app-pub-1581341295962339/2601606803</string>


    <string name="licenses_text">
        JSoup\n\n
        The jsoup code-base (include source and compiled packages) are distributed under the open source MIT license as described below.
        The MIT License
        Copyright © 2009 - 2013 Jonathan Hedley (jonathan@hedley.net)
        Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
        The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>

    <string-array name="administration_list">
        <item>Angelo4ek666</item>
        <item>АгентКа</item>
        <item>ТОПТЫШКИН</item>
        <item>SAVAGE</item>
        <item>John@Silver</item>
        <item>Жозелька</item>
        <item>Shanson</item>
        <item>opposition</item>
        <item>Belk@3</item>
        <item>Kalli</item>
        <item>Злой!</item>
        <item>ЯНепростаЯ</item>
        <item>~ТриТаТуЛьКа~</item>
        <item>djtema</item>
        <item>Сладкая</item>
        <item>Matveii</item>
        <item>~[knight]~</item>
        <item>Milanita</item>
        <item>Повстанка</item>
        <item>*LoVe_FloWeRs*</item>
        <item>ИзБаЛоВаНнАя=)</item>
        <item>Lilisa</item>
        <item>Хвесько)</item>
        <item>Aisberg</item>
        <item>ФикциЯ</item>
        <item>~@ИлЛюЗиЯ@~</item>
        <item>Amnesia</item>
        <item>Эмпатия</item>
        <item>ЛыС@Я_фЕя</item>
    </string-array>
    <string name="title_activity_ghost_room">Комната Ghostsilen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
